refactory nos endpoint